SYAL-3089: Fix Java 8 source compatibility
Replace switch arrow rules, var, Map.of/List.of, and Stream.toList()
with Java 8 equivalents to match -source 8 / -target 8 pom.xml config.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>